--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <title>Directive Practice 1</title>
   <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 </head>
 
 <body ng-app="directivePractice" ng-controller="mainCtrl">
-  {{test}}
   <ul>
-    <lesson-hider lesson="lesson" day-alert="announceDay(lesson, day)" ng-repeat="lesson in lessons"></lesson-hider>
+    <lesson-hider remove-lesson="removeLesson(lesson)" lesson="lesson" day-alert="announceDay(lesson, day)" ng-repeat="lesson in lessons"></lesson-hider>
   </ul>
   <!--scripts-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular.js"></script>
